# webserver

./: CMakeLists.txt  README.md  Source.cpp  main.cpp  server
include/: ConnectionRAII.hpp  ReQuestHandler.hpp  Server.hpp  ServerStats.hpp
src/: ConnectionRAII.cpp  ReQuestHandler.cpp  main.cpp  server.cpp
static/: index.html
